--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "epochblue/philip": "dev-master",
-        "symfony/process": "dev-master"
+        "symfony/process": "dev-master",
         "epochblue/philip-plugins": "dev-master"
     }
 }
